<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtnmr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/n_mero_1" />

        <EditText
            android:id="@+id/nmr1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/introduzca_un_n_mero_entero1"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtnmr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/n_mero_2" />

        <EditText
            android:id="@+id/nmr2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/introduzca_un_n_mero_entero"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:text=""
        android:textColor="#FF9800"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btnSumar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="10dp"
            android:text="@string/Botonmas"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRestar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="10dp"
            android:text="@string/Botonmenos"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="10dp"
            android:text="@string/Botonmultiplicar"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="10dp"
            android:text="@string/Botondividir"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:paddingBottom="20dp"
        android:text="@string/borrar"
        android:textColor="#FFFFFF"
        app:cornerRadius="0dp" />

</LinearLayout>